# trip-manager

./: .dockerignore  .env.example  .gitignore  BFF_CLEANUP.md  BFF_CLEANUP_COMPLETION.md  DEPLOYMENT.md  FINAL_FIX_S3_PUBLIC_URL.md  LICENSE  MAKEFILE.md  Makefile  PRESIGNED_URL_PLAN.md  README.md  SETUP.md  build-dockerfiles.sh  docker-compose.yaml  helmfile.yaml.gotmpl  local-dev.md  merge-config.json  oapi-codegen-feed.yaml  oapi-codegen-locations.yaml  oapi-codegen-newsletter.yaml  oapi-codegen-presigner.yaml  oapi-codegen-social.yaml  oapi-codegen-trips.yaml  oapi-codegen-users.yaml  oapi-codegen.yaml  openapi-generator-config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CI_CD.md
api-spec/: README.md  openapi.yaml  openapi_old.yaml  trip_manager_api_schema.html
argocd/: applicationset-cluster-config-staging.yaml  applicationset-cluster-config.yaml  applicationset-enterprise.yaml  applicationset-external-secrets.yaml  applicationset-prod.yaml  applicationset-staging.yaml
backend/: .air.toml  .dockerignore  .gitignore  AUTH.md  Dockerfile  docker-compose.yaml  go.mod  (+3 more)
tests/loadtests/: .env.example  .gitignore  Dockerfile  Makefile  README.md  analyze.py  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt  run.sh  scenario.py  scenario_examples.py
tests/loadtests/config/: settings.py
tests/loadtests/data/: users.csv
tests/loadtests/seeding/: cleanup.py  generators.py  provision_only.py  seed.py
tests/loadtests/tests/: account_user.py  auth_user.py  base.py  media_user.py  power_user.py  read_user.py
(+901 files in other folders)
