[project]
name = "loadtests"
version = "0.1.0"
description = "Flexible hierarchical load testing framework for Trip Manager API using Locust"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=40.13.0",
    "httpx>=0.28.1",
    "locust>=2.43.4",
    "pillow>=12.2.0",
]

[project.scripts]
generate-users = "loadtests.seeding.seed:generate_users"